Major refresh and update

--- a/lexicon.html
+++ b/lexicon.html
@@ -63,61 +63,25 @@
     <section>
       <h2>Core Terms</h2>
       <dl>
+
         <dt>AI Discoverability</dt>
         <dd>
           AI Discoverability is the discipline of ensuring that AI systems can correctly identify, understand, and represent people, organisations, relationships, and ideas.
         </dd>
 
-        <dt>Machine-Legibility</dt>
+        <dt>Category Creation</dt>
         <dd>
-          The degree to which a business’s information is structured, unambiguous, and readable by AI systems,
-          independent of how it appears to humans.
-        </dd>
-
-        <dt>Entity Clarity</dt>
-        <dd>
-          How confidently an AI system can determine what an organisation is, what it does, and what it offers
-          based on available information.
-        </dd>
-
-        <dt>Entity Understanding Layer™</dt>
-        <dd>
-          EntityWorks’ interpretive model for how AI systems appear to build and update their internal understanding
-          of entities. Instead of exposing proprietary internals, it organises observable behaviour into six
-          higher-level patterns we can reasonably infer are happening:
-          Identification, Attribution, Contextualisation, Weighting, Updating, and Propagation. Together, these
-          behaviours offer a structured way to think about how AI systems internally process entities and allow
-          leaders to reason about “how AI sees us” without overstating claims about any specific model.
-          See <a href="/entity-understanding-layer.html">EUL overview</a>.
-        </dd>
-
-        <dt>Representation Drift</dt>
-        <dd>
-          The gradual divergence between how a business describes itself and how AI systems come to describe it over time.
+          The act of defining, naming, and formalising a discipline or field where no coherent, shared structure previously existed.
         </dd>
 
         <dt>Claims Discipline</dt>
         <dd>
-          The practice of ensuring that all statements about AI Discoverability, the EntityWorks
-          Discoverability Index™ (EDI), and related outcomes remain verifiable, proportionate, and non-misleading.
-        </dd>
-
-        <dt>Structured Data</dt>
-        <dd>
-          Information expressed in machine-readable formats (such as schema.org JSON-LD, metadata, or well-formed tables)
-          that helps AI systems reliably interpret entities.
-        </dd>
-
-        <dt>AI Readiness</dt>
-        <dd>
-          The extent to which a business’s public footprint is clear, up to date, and aligned across the key sources
-          AI systems rely on.
+          The practice of ensuring that all statements about AI Discoverability, the EntityWorks Discoverability Index™ (EDI), and related outcomes remain verifiable, proportionate, and non-misleading.
         </dd>
 
         <dt>Continuous Optimisation</dt>
         <dd>
-          The ongoing process of monitoring and adjusting a business’s machine-legible presence as AI systems,
-          models, and information sources evolve.
+          The ongoing process of monitoring and adjusting a business’s machine-legible presence as AI systems, models, and information sources evolve.
         </dd>
 
         <dt>Discoverability Score (0–100)</dt>
@@ -132,33 +96,18 @@
           (1) Structured Data, (2) AI Readiness, and (3) Continuous Optimisation.
         </dd>
 
-        <dt>Profile Summary</dt>
+        <dt>Entity Collision Problem</dt>
         <dd>
-          A concise narrative describing how AI systems currently perceive and present a business, based on EDI findings.
+          A machine-era failure mode where AI systems mistakenly merge two distinct entities into one,
+          or split one entity into multiple conflicting identities.  
+          Collisions occur when machine-legible signals lack clarity, corroboration, or semantic stability.  
+          See <a href="/ai-entity-collision-problem.html">Entity Collision overview</a>.
         </dd>
 
-        <dt>Priority Path</dt>
+        <dt>Entity Clarity</dt>
         <dd>
-          A sequenced set of recommendations designed to improve a business’s Discoverability Score in the most efficient
-          and impactful order.
-        </dd>
-
-        <dt>Presence Stack™</dt>
-        <dd>
-          A layered model describing the components that shape how AI systems see, interpret, and prioritise a business’s
-          presence across the digital environment.
-        </dd>
-
-        <dt>Inter-Source Alignment</dt>
-        <dd>
-          The level of consistency between multiple public sources (such as websites, profiles, directories, and knowledge graphs)
-          when they describe the same organisation.
-        </dd>
-
-        <dt>Semantic Integrity</dt>
-        <dd>
-          The preservation of meaning across different descriptions, channels, and formats, so that AI systems receive
-          a coherent picture of the business.
+          How confidently an AI system can determine what an organisation is, what it does, and what it offers
+          based on available information.
         </dd>
 
         <dt>Entity Surface Area</dt>
@@ -167,30 +116,70 @@
           including both structured and unstructured data.
         </dd>
 
-        <dt>Category Creation</dt>
+        <dt>Entity Understanding Layer™</dt>
         <dd>
-          The act of defining, naming, and formalising a discipline or field where no coherent, shared structure
-          previously existed.
+          A conceptual model describing what we can reasonably infer AI systems do when forming and updating internal representations of entities.  
+          Instead of exposing proprietary internals, it organises observable behaviours into six higher-level patterns.  
+          See <a href="/entity-understanding-layer.html">EUL overview</a>.
         </dd>
 
-        <dt>Entity-Coherence Score</dt>
+        <dt>Inter-Source Alignment</dt>
         <dd>
-          An internal metric concept for assessing how uniformly and consistently a business is represented
-          across AI-indexed sources.
-        </dd>
-
-        <dt>EntityWorks Discoverability Index™ (EDI)</dt>
-        <dd>
-          A structured, measurable framework for assessing AI Discoverability and generating a Discoverability Score,
-          Profile Summary, and Priority Path for a business. The EDI sits on top of the patterns described in the
-          Entity Understanding Layer™, translating them into a practical 0–100 assessment. See
-          <a href="/discoverability-index.html">EDI overview</a>.
+          The level of consistency between multiple public sources when they describe the same organisation.
         </dd>
 
         <dt>Legacy SEO</dt>
         <dd>
           A shorthand for traditional, search-engine-focused optimisation practices that prioritise human search results
           and rankings rather than AI interpretation and machine-legibility.
+        </dd>
+
+        <dt>Machine-Legibility</dt>
+        <dd>
+          The degree to which a business’s information is structured, unambiguous, and readable by AI systems.
+        </dd>
+
+        <dt>Priority Path</dt>
+        <dd>
+          A sequenced set of recommendations designed to improve a business’s Discoverability Score in the most efficient and impactful order.
+        </dd>
+
+        <dt>Profile Summary</dt>
+        <dd>
+          A concise narrative describing how AI systems currently perceive and present a business, based on EDI findings.
+        </dd>
+
+        <dt>Representation Drift</dt>
+        <dd>
+          The gradual divergence between how a business describes itself and how AI systems come to describe it over time.
+        </dd>
+
+        <dt>Semantic Integrity</dt>
+        <dd>
+          The preservation of meaning across different descriptions, channels, and formats, ensuring AI receives a coherent picture.
+        </dd>
+
+        <dt>Structured Data</dt>
+        <dd>
+          Information expressed in machine-readable formats (such as schema.org JSON-LD, metadata, or well-formed structure)
+          that helps AI systems reliably interpret entities.
+        </dd>
+
+        <dt>AI Readiness</dt>
+        <dd>
+          The extent to which a business’s public footprint is clear, up to date, and aligned across the key sources
+          AI systems rely on.
+        </dd>
+
+        <dt>Presence Stack™</dt>
+        <dd>
+          A layered model describing the components that shape how AI systems see, interpret, and prioritise a business’s presence.
+        </dd>
+
+        <dt>EntityWorks Discoverability Index™ (EDI)</dt>
+        <dd>
+          A structured, measurable framework for assessing AI Discoverability and generating a Discoverability Score,
+          Profile Summary, and Priority Path. See <a href="/discoverability-index.html">EDI overview</a>.
         </dd>
       </dl>
     </section>
@@ -199,7 +188,7 @@
   <p style="font-size: 0.85rem; color: #888; margin-top: 3rem;">
     Last updated: November 2025
   </p>
-  
+
   <div id="footer"></div>
   <script>
     fetch("/footer.html")
